--- a/task5_1.css
+++ b/task5_1.css
@@ -71,6 +71,8 @@ body{
     border-right: 1px solid #c2c2c2;
 }
 .navigation_li span{
+    font-size: 1.5rem;
+    color: #c2c2c2;
     height: 100%;
     width: 85%;
     display: inline-block;
