--- a/task5_1.css
+++ b/task5_1.css
@@ -1,5 +1,5 @@
 body{
-    margin-top: 8%;
+    margin-top: 8rem;
 }
 /*顶部样式，浏览器顶端*/
 .top{
@@ -7,7 +7,7 @@ body{
     position: fixed;
     top: 0;
     width: 100%;
-    padding-bottom: 0.5%;
+    padding-bottom: 1rem;
     background-color: white;
     border-bottom: 1px  solid #c2c2c2;
 }
@@ -30,14 +30,14 @@ body{
 }
 .head_choose{
     display: inline-block;
-    width: 60%;
+    width: 40%;
     list-style: none;
     border-radius: 5px;
     background-color: #55A8B3;
 }
 .li_1{
     float: left;
-    padding: 1% 2%;
+    padding: 1rem 2%;
     width: 46%;
     background-color: white;
     border-radius: 5px;
@@ -49,7 +49,7 @@ body{
 }
 .li_2{
     float: left;
-    padding: 1% 2%;
+    padding: 1rem 2%;
     width: 46%;
     border-radius: 5px;
     text-align: center;
@@ -99,6 +99,8 @@ body{
 }
 .bottom_box{
     display: inline-block;
+    *display:inline;
+    *zoom:1;
     margin: 0 8%;
 }
 #p1{
@@ -127,6 +129,7 @@ body{
     border-bottom: 1px solid #c2c2c2;
 }
 .demo{
+    list-style: none;
     padding: 1% 4%;
     width: 90%;
     display: inline-block;
@@ -138,7 +141,6 @@ body{
     color: #c2c2c2;
 }
 .demo2{
-    list-style-image: none;
     vertical-align: middle;
 }
 .demo2_1{
